frontend/pixel-vision/src/app/new-project/new-project-form/new-project-form.component.css
/* new-project-form.component.css */

html, body {
    height: 100%;
    margin: 0;
    background-color: #f5f5f5;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  
  .app-new-project-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 3rem;
    background-color: #ffffff;
    border-radius: 8px;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
  }
  
  .project-form {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
    max-width: 500px;
    margin-bottom: 1rem;
  }
  
  .form-label {
    margin-bottom: 0.5rem;
  }
  
  .form-input {
    padding: 0.5rem;
    font-size: 1.5rem;
    line-height: 1.5;
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    width: 100%;
  }
  
  .submit-button {
    background-color: #ff5722;
    color: #fff;
    font-size: 1.5rem;
    padding: 0.8rem 1.5rem;
    border-radius: 4px;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
    cursor: pointer;
    transition: all 0.3s ease-in-out;
    border: none;
    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
    outline: none;
    margin-top: 1rem;
    text-align: center;
  }
  
  .submit-button:hover {
    background-color: #f4511e;
    color: #fff;
    transform: scale(1.05);
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
  }
  

